# MuonDataLib

./: .gitignore  .readthedocs.yaml  MuonDataLib-dev.yml  MuonDataLib.yml  README.md  launch_GUI.py  launch_help.py  meson.build  pyproject.toml  setup.py  speed_profile.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: docs2.yml  flake8.yml  label_merge_conflicts.yml  lint.yml  merge.yml  release.yml  release_next.yml  run_tests.yml  test_merge.yml  update.yml
docs/: gen_API.py  make.bat
docs/source/: conf.py  index.rst  intro.rst
docs/source/API/: index.rst  intro.rst
docs/source/dev/: index.rst  setup.rst
docs/source/examples/: index.rst  intro.rst
docs/source/examples/Output_files/: README.md
docs/source/examples/tutorials/: API.ipynb  example_manychunks.ipynb  tutorial_1.ipynb  tutorial_2.ipynb  tutorial_3.ipynb  tutorial_4.ipynb  tutorial_5.ipynb  tutorial_6.ipynb  tutorial_7.ipynb
profile/: GPU.py  N_filter_len.py  N_threads.py  run_time.py  speed_profile.py  utils.py
src/MuonDataLib/: filters.py  gui.py  test.py  wimda_save.py
src/MuonDataLib/GUI/: help.py  launch.py  main_GUI.py  main_app.py  main_window.py  moo.py  presenter_template.py  view_template.py  worker.py
src/MuonDataLib/GUI/amp/: presenter.py  view.py
src/MuonDataLib/GUI/control_pane/: presenter.py  view.py
src/MuonDataLib/GUI/filters/: presenter.py  view.py
src/MuonDataLib/GUI/histogram_settings/: presenter.py  view.py
src/MuonDataLib/GUI/load_bar/: presenter.py  view.py
src/MuonDataLib/GUI/log/: presenter.py  view.py
src/MuonDataLib/GUI/main_app/: presenter.py  view.py
src/MuonDataLib/GUI/main_app/assets/: dashAgGridComponentFunctions.js
src/MuonDataLib/GUI/plot_area/: presenter.py  view.py
src/MuonDataLib/GUI/save_bar/: presenter.py  view.py
src/MuonDataLib/GUI/table/: column.py  header.py  presenter.py  view.py
src/MuonDataLib/GUI/time/: presenter.py  view.py
src/MuonDataLib/GUI/utils/: main_window.py  worker.py
src/MuonDataLib/cython_ext/: add.pyx  base_sample_logs.pyx  event_data.pyx  events_cache.pyx  filter.pyx  filters.pyx  load_events.pyx  stats.py  stats.pyx  utils.pyx
src/MuonDataLib/cython_ext/filters/: _utils.cpp  _utils.h  filter_manager.pyx  filters.pyx  frame_filter.pyx  max_filter.pyx  min_filter.pyx  utils.pyx
src/MuonDataLib/data/: detector1.py  filters.py  hdf5.py  muon_data.py  periods.py  raw_data.py  sample.py  sample_logs.py  source.py  test.py  user.py  utils.py
src/MuonDataLib/data/events/: detector.py  frame.py  instrument.py
src/MuonDataLib/data/loader/: load_event.py  load_events.py
src/MuonDataLib/data/store/: data_template.py  makefile.txt  sample.py  source.py
src/MuonDataLib/examples/: add.py  makefile.txt
src/MuonDataLib/help/: help.py  help_docs.py  load_events.py  muon_data.py
src/MuonDataLib/numba/: GPU.py  stats.py
src/MuonDataLib/plot/: basic.py
src/MuonDataLib/test_helpers/: detector1.py  nexus.py  periods.py  raw_data.py  table_ref_data.py  unit_test.py  utils.py
test/: conftest.py
test/GUI/: data_paths.py  moo_test.py
test/GUI/control_pane/: control_pane_presenter_test.py
test/GUI/filters/: filters_presenter_test.py
test/GUI/histogram_settings/: hist_settings_presenter_test.py
test/GUI/load_bar/: load_bar_presenter_test.py
test/GUI/log/: log_presenter_test.py
test/GUI/main_app/: main_app_presenter_test.py
test/GUI/plot_area/: plot_area_presenter_test.py
test/GUI/save_bar/: save_bar_presenter_test.py
test/GUI/system_tests/: load_and_save_test.py
test/GUI/table/: column_test.py  table_col_test.py  table_group_test.py  table_presenter_test.py
test/GUI/time/: time_presenter_test.py
test/cython/: add_test.py
test/cython_ext/: add_test.py  base_sample_logs_test.py  events_cache_test.py  events_test.py  filter_test.py  load_events_test.py  multiperiod_events_test.py  stats_test.py  utils_test.py
test/data/: detector1_test.py  muon_data_test.py  periods_test.py  raw_data_test.py  sample_logs_test.py  sample_test.py  user_test.py  utils_test.py
test/data/events/: detector_test.py  frame_test.py  instrument_test.py
test/data/loader/: load_event_test.py  load_events_test.py
test/data_files/: HIFI00180594.nxs  HIFI00183810.nxs  HIFI00195790.nxs  HIFI42.nxs  HIFI51.nxs  README.md  complete_run.nxs  filter_exclude.json  filter_include.json  filters.py  generate_filters.py  load_bad_filter.json  load_filter.json  partial_run.nxs  script_load_filter.json  simple_test.nxs
test/examples/: add_test.py
test/numba/: numba_stats_test.py
test/system_tests/: multiperiod_test.py  single_period_event_test.py  single_period_test.py
test/test_helpers/: unit_test.py
tools/: conda_dict_to_yml.py  create_conda_yml.py  file_conversion.py  version.py
