[build-system]
requires = ['cython', 'numpy', 'setuptools']
build-backend = 'setuptools.build_meta'

[tool.setuptools]
package-dir = {"" = "src"}
ext-modules = [{name="MuonDataLib.cython_ext.base_sample_logs", sources=["src/MuonDataLib/cython_ext/base_sample_logs.pyx"]},
	       {name="MuonDataLib.cython_ext.event_data", sources=["src/MuonDataLib/cython_ext/event_data.pyx"]},
               {name="MuonDataLib.cython_ext.events_cache", sources=["src/MuonDataLib/cython_ext/events_cache.pyx"]},
               {name="MuonDataLib.cython_ext.load_events", sources=["src/MuonDataLib/cython_ext/load_events.pyx"]},
               {name="MuonDataLib.cython_ext.stats", sources=["src/MuonDataLib/cython_ext/stats.pyx"]},
               {name="MuonDataLib.cython_ext.filter", sources=["src/MuonDataLib/cython_ext/filter.pyx"]},
               {name="MuonDataLib.cython_ext.utils", sources=["src/MuonDataLib/cython_ext/utils.pyx"]}
	       ]


[tool.setuptools.packages.find]
where = ["src"]

[project]
name = 'muondatalib'

version = "0.9.2b11"

requires-python = ">=3.8"
dependencies = ['numpy', 'h5py', 'plotly', 'cython', 'pyside6', 'dash[testing]', 'dash_bootstrap_components', 'dash_daq', 'dash-ag-grid']
authors = [{name='Anthony Lim', email='anthony.lim@stfc.ac.uk'}]
description = 'Reading and writing for ISIS muon experiments.'
readme = 'README.md'
license = {text = 'BSD'}

