[build-system]
requires = ['meson-python', 'cython', 'numpy']
build-backend = 'mesonpy'

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = 'muondatalib'

version = "0.9.2b11"

requires-python = ">=3.9"
dependencies = ['numpy', 'h5py', 'plotly', 'cython', 'pyside6', 'dash[testing]', 'dash_bootstrap_components', 'dash_daq', 'dash-ag-grid']
authors = [{name='Anthony Lim', email='anthony.lim@stfc.ac.uk'}]
description = 'Reading and writing for ISIS muon experiments.'
readme = 'README.md'
license = {text = 'BSD'}

