[build-system]
requires = ['cython', 'numpy', 'setuptools', 'pyside6']
build-backend = 'setuptools.build_meta'

[tool.setuptools]
package-dir = {"" = "src"}


[tool.setuptools.packages.find]
where = ["src"]

[project]
name = 'muondatalib'

version = "0.13.0b1"

requires-python = ">=3.8"
dependencies = ['numpy', 'h5py', 'plotly', 'cython', 'pyside6', 'dash[testing]', 'dash_daq', 'dash-ag-grid', 'dash_bootstrap_components']
authors = [{name='Anthony Lim', email='anthony.lim@stfc.ac.uk'}]
description = 'Reading and writing for ISIS muon experiments.'
readme = 'README.md'
license = {text = 'BSD'}

